// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseCSS with output "hex" "#ff0044" should return properly 1`] = `"#ff0044"`;

exports[`parseCSS with output "hex" "AliceBlue" should return properly 1`] = `"#f0f8ff"`;

exports[`parseCSS with output "hex" "greenyellow" should return properly 1`] = `"#adff2f"`;

exports[`parseCSS with output "hex" "hsl(255,80%,20%)" should return properly 1`] = `"#1f0a5c"`;

exports[`parseCSS with output "hex" "hsl(270 60% 70%)" should return properly 1`] = `"#b385e0"`;

exports[`parseCSS with output "hex" "hsl(270 60%, 70% / .15)" should return properly 1`] = `"#b385e0"`;

exports[`parseCSS with output "hex" "hsla(126,     57%,  62%,0.5)" should return properly 1`] = `"#67d572"`;

exports[`parseCSS with output "hex" "rgb(255, 255, 0)" should return properly 1`] = `"#ffff00"`;

exports[`parseCSS with output "hex" "rgba(255, 127, 12, 0.5)" should return properly 1`] = `"#ff7f0c"`;

exports[`parseCSS with output "hsl" "#ff0044" should return properly 1`] = `
{
  "h": 344,
  "l": 50,
  "s": 100,
}
`;

exports[`parseCSS with output "hsl" "AliceBlue" should return properly 1`] = `
{
  "h": 208,
  "l": 97.06,
  "s": 100,
}
`;

exports[`parseCSS with output "hsl" "greenyellow" should return properly 1`] = `
{
  "h": 83.65,
  "l": 59.22,
  "s": 100,
}
`;

exports[`parseCSS with output "hsl" "hsl(255,80%,20%)" should return properly 1`] = `
{
  "h": 255,
  "l": 20,
  "s": 80,
}
`;

exports[`parseCSS with output "hsl" "hsl(270 60% 70%)" should return properly 1`] = `
{
  "h": 270,
  "l": 70,
  "s": 60,
}
`;

exports[`parseCSS with output "hsl" "hsl(270 60%, 70% / .15)" should return properly 1`] = `
{
  "h": 270,
  "l": 70,
  "s": 60,
}
`;

exports[`parseCSS with output "hsl" "hsla(126,     57%,  62%,0.5)" should return properly 1`] = `
{
  "h": 126,
  "l": 62,
  "s": 57,
}
`;

exports[`parseCSS with output "hsl" "rgb(255, 255, 0)" should return properly 1`] = `
{
  "h": 60,
  "l": 50,
  "s": 100,
}
`;

exports[`parseCSS with output "hsl" "rgba(255, 127, 12, 0.5)" should return properly 1`] = `
{
  "h": 28.4,
  "l": 52.35,
  "s": 100,
}
`;

exports[`parseCSS with output "rgb" "#ff0044" should return properly 1`] = `
{
  "b": 68,
  "g": 0,
  "r": 255,
}
`;

exports[`parseCSS with output "rgb" "AliceBlue" should return properly 1`] = `
{
  "b": 255,
  "g": 248,
  "r": 240,
}
`;

exports[`parseCSS with output "rgb" "greenyellow" should return properly 1`] = `
{
  "b": 47,
  "g": 255,
  "r": 173,
}
`;

exports[`parseCSS with output "rgb" "hsl(255,80%,20%)" should return properly 1`] = `
{
  "b": 92,
  "g": 10,
  "r": 31,
}
`;

exports[`parseCSS with output "rgb" "hsl(270 60% 70%)" should return properly 1`] = `
{
  "b": 224,
  "g": 133,
  "r": 179,
}
`;

exports[`parseCSS with output "rgb" "hsl(270 60%, 70% / .15)" should return properly 1`] = `
{
  "b": 224,
  "g": 133,
  "r": 179,
}
`;

exports[`parseCSS with output "rgb" "hsla(126,     57%,  62%,0.5)" should return properly 1`] = `
{
  "b": 114,
  "g": 213,
  "r": 103,
}
`;

exports[`parseCSS with output "rgb" "rgb(255, 255, 0)" should return properly 1`] = `
{
  "b": 0,
  "g": 255,
  "r": 255,
}
`;

exports[`parseCSS with output "rgb" "rgba(255, 127, 12, 0.5)" should return properly 1`] = `
{
  "b": 12,
  "g": 127,
  "r": 255,
}
`;
